# bip39gen

./: .gitignore  Cargo.toml  README.md  wallets.txt
src/: console.rs  crypto.rs  files.rs  main.rs
