[package]
name = "bip39gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "2.1.0"
rand = "0.8.5"
sha2 = "0.10.8"
md-5 = "0.10.6"
aes-gcm = "0.10.3"
base64 = "0.21"
num-format = "0.4.4"

[profile.dev]
opt-level = 0
codegen-units = 14
incremental = true
strip = true

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 14
incremental = true
strip = true
